# noverde_challenge

./: .gitignore  Makefile  README.md  README.rst  mypy.ini  package-lock.json  package.json  pyproject.toml  serverless.yml  setup.cfg
.github/workflows/: pythonapp.yml
NoverdeChallenge/: __init__.py  handler.py
noverde_challenge/: __init__.py
noverde_challenge/handlers/: __init__.py  analysis.py  loan.py
noverde_challenge/models/: loan.py
noverde_challenge/policies/: __init__.py
noverde_challenge/policies/data/: noverde_rate_model.csv
noverde_challenge/policies/stakeholders/: __init__.py  noverde.py
noverde_challenge/schemas/: loan.py
noverde_challenge/utils/: debug.py  handler.py  handler_task.py  handler_view.py  helpers.py  rates.py  secrets.py  sentry.py  status_code.py
tests/: __init__.py  conftest.py  test_noverde_challenge.py  test_utils.py
tests/loan/: __init__.py  test_handlers.py  test_model.py  test_schemas.py  test_task_handlers.py  test_view_handlers.py
tests/policy/: __init__.py  test_noverde_policy.py
