[tool.coverage.report]
fail_under = 80

[tool.mypy]
strict = true

[tool.pytest]
addopts = '--pycodestyle --pydocstyle'

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.poetry]
name = "NoverdeChallenge"
version = "0.1.0"
description = "Noverde Technical Challenge"
authors = ["Chris Maillefaud <chrismaillefaud@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-black = "*"
pytest-pycodestyle = "*"
pytest-pydocstyle = "*"
pytest-cov = "*"
pytest-xdist ="*"
pytest-mypy = "*"
black = {version="*",allow-prereleases = true}
pygments = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
